--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@100;300;400;500;600;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Manrope",  sans-serif;
+  text-transform: uppercase;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+section[id] {
+  scroll-margin-top: 40px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  color: rgb(112, 60, 60);
 }
