--- a/src/components/info/Info.css
+++ b/src/components/info/Info.css
@@ -5,26 +5,24 @@
   background-color: #222831;
   color: black;
   margin-bottom: 100vh;
+  align-items: center;
 }
 
 .info {
   display: flex;
 }
-.certificado {
-  margin-left: 5%;
-}
+
 .desarrolloWeb {
   width: 80%;
-  border-radius: 2px;
+  margin-left: 10%;
+  border-radius: 8px;
 }
 
 .titleCertificado {
   display: flex;
   justify-content: center;
   color: #af9c9c;
-  padding-top: 100px;
-  padding-bottom: 100px;
-
+  padding: 50px;
   font-size: 40px;
 }
 
