--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -3,7 +3,7 @@
   top: 0;
   background-color: transparent;
   width: 100%;
-  height: 13vh;
+  height: 80px;
   padding-left: 50px;
   font-size: 16px;
   z-index: 1;
