--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -3,8 +3,8 @@
   background-color: #222831;
   width: 100%;
   justify-content: center;
-  height: 100vh;
-  padding-top: 13vh;
+  height: 90vh;
+}
 
 .ContainerProjects {
   display: flex;
