--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -61,22 +61,19 @@
   .about-container2 {
     display: flex !important;
     flex-direction: column-reverse;
+    align-items: center; /* Centra los elementos verticalmente */
   }
   .about-desc {
     width: 100%;
     margin: 0 auto;
-    padding: 50px 10px 50px 1px;
-  }
-  .about-desc > h3 {
-    font-size: 20px;
-    text-align: center;
+    padding: 0px 10px; /* Ajusta el padding */
+    text-align: center; /* Alinea el texto al centro */
   }
   .about-img {
     width: 90%;
     margin: 0 auto;
     margin-top: 20px;
   }
-
   .about-img > img {
     width: 100%;
   }
